Implemented component tasks list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,17 @@
-<div class="ui-g">
-  <div class="ui-g-12">
-
-    <header>
+<div>
+  <div class="p-grid">
+    <div class="p-col-1"></div>
+    <div class="p-col-10">
       <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu>
-    </header>
-
-    <div class="container-fluid">
-      <router-outlet></router-outlet>
     </div>
-
-    <footer class="main-footer">
-      Copyright &copy; HiLo 2018 <a href [routerLink]="['/about']">About</a>
-    </footer>
+    <div class="p-col-1"></div>
   </div>
 
-
-
+  <div class="p-grid">
+    <div class="p-col-1"></div>
+    <div class="p-col-10">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="p-col-1"></div>
+  </div>
 </div>
