correct width + route selection

--- a/client/src/app/tasks-list/tasks-list.component.html
+++ b/client/src/app/tasks-list/tasks-list.component.html
@@ -16,8 +16,8 @@
                 [resizableColumns]="true"
                 [value]="tasks" 
                 [(selection)]="selectedTask"
-                (onRowSelect)="onRowSelect($event)" 
-                (onRowUnselect)="onRowUnselect($event)"
+                (onRowSelect)="onRowSelect()" 
+                (onRowUnselect)="onRowUnselect()"
                 [scrollable]="true">
             <ng-template pTemplate="colgroup" let-columns>
                 <colgroup>
