--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -26,6 +26,11 @@
   cursor: pointer;
 }
 
-.ui-table-scrollable-header-box {
-  margin-right: 1.8vh !important;
+// .ui-table-scrollable-header-box {
+//   margin-right: 1.8vh !important;
+// }
+
+.scrollable-container {
+  overflow-x: auto;
+  display: block;
 }
