--- a/client/src/app/tasks-list/tasks-list.component.html
+++ b/client/src/app/tasks-list/tasks-list.component.html
@@ -5,7 +5,7 @@
             <button [style.float]="'right'" type="button" pButton (click)="refreshData()" label="Refresh"></button>
         </div>        
         <p></p>
-        <div class="scrollable-container" style="height: 59vh">
+        <div class="scrollable-container" style="max-height: 62vh">
             <p-table selectionMode="single"
                     responsive="true"
                     [rows]="rows"
@@ -18,6 +18,7 @@
                     (onRowUnselect)="onRowUnselect()"
                     [rowsPerPageOptions]="rowsPerPageOptions"
                     pageLinks="15"
+                    paginatorPosition="top"
                     [lazy]="true" 
                     (onLazyLoad)="onPageChanged($event)"
                     [paginator]="true"
