--- a/client/src/app/task-add/task-add.component.html
+++ b/client/src/app/task-add/task-add.component.html
@@ -2,7 +2,7 @@
     <div>
         <p></p>
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
-            <p-panel header="Validate">
+            <p-panel header="Task parameters">
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"
                     style="margin: 10px 0px">
                     <div class="ui-grid-row">
